correct formatting, apply changes due to Java 11
--HG--
branch : idempiere-6.2